--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <nav>
+        <button id="clear">Clear</button>
         <button id="open">Open</button>
         <button id="save">Save</button>
         <button id="copy">Copy</button>
         <button id="paste">Paste</button>
         <button id="share">Share</button>
+        <button id="write">Write</button>
+        <div><font-select id="font" value="Comic Sans MS"></font-select></div>
         <input type="color" id="color">
     </nav>
     <canvas id="canvas" width="600" height="480"></canvas>
+    <script src="https://unpkg.com/font-select@1.0.3/dist/font-select.min.mjs" type="module"></script>
     <script src="app.js" type="module"></script>
     <script>
         if (navigator.serviceWorker) {
