--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="origin-trial" content="AvFnj8JG8spM/1RR7s6xBVAKCkMvPoAqAlzs6z7v8hDuNg7+vah9QveTh2jzSVFQraVW3BqiLcElN7WPHA/ZbggAAABVeyJvcmlnaW4iOiJodHRwczovL3RvbWF5YWMuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJGb250QWNjZXNzIiwiZXhwaXJ5IjoxNjA5NTE2MTA1fQ==">
 </head>
 <body>
     <nav>
